# fetch-btc-data

./: .gitignore  README.md  pyproject.toml
results/BTCJPY/: BTCJPY_20250101_interval_15min.csv
scripts/: main.py
src/fetch_btc_data/: fetch_from_gmo.py  providers_gmo.py
