[project]
name = "fetch-btc-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'click == 8.2.1',
    'dotenv == 0.9.9',
    'polars == 1.32.3',
    'pandas == 2.3.0',
    'pyarrow == 20.0.0',
    'requests == 2.32.4',
    'matplotlib == 3.10.3',
    'numpy == 2.3.1',
    'seaborn == 0.13.2',
    'scipy == 1.16.0',
    'ipykernel == 6.30.0'
]

[dependency-groups]
dev = [
    'colorlog == 6.9.0',
    'ipython == 9.4.0',
    'pytest == 8.4.1'
]